02-Todo/src/styles.css
*{
    margin: 0;
}
.head{
    background-color: blanchedalmond;
    height: 25vh;
    text-align: center;
}
.title{
    font-size: 10vh;
}
input{
    height: 5vh;
    width: 20vh;
    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
    border: 2px;
    text-align: center;
}
.addbtn{
    height: 4vh;
    width: 8vh;
    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
    margin-left: 1vh;
}
.warning{
    margin-top: 1vh;
}
.container{
    margin-top: 1vh;
}
#list1{
    text-align: center;
    margin-bottom: 5vh;
}
#list2{
    margin-top: 5vh;
    text-align: center;
}
#list2 input{
    background-color: rgb(182, 168, 146);
}
.ele{
    border-color: white;
}
@media (min-width: 750px){
    input{
        width: 45vh;
        font-size: 3vh;
    }
}
@media (prefers-color-scheme: dark){
    .title{
        color: white;
    }
    .head{
        background-color: #393e46;
    }
    body{
        background-color: #433d3c;
    }
    input{
        background-color: #433d3c;
        color: white;
    }
    #list2 input{
        background-color: #2c2827;
    }
}
#done{
    width: 3vh;
    height: 2vh;
    box-shadow: none;
    margin-right: 1vh;
}

